# canvas_integration

./: .env.example  .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
.agent/workflows/: manage-dependencies.md
custom_components/canvas/: __init__.py  api.py  assignment_logic.py  calendar.py  calendar_logic.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  student_logic.py
src/canvas/: __init__.py
tests/: conftest.py  test_api.py  test_api_pagination.py  test_coordinator.py  test_integration.py  test_logic.py
tests/fixtures/: assignments.json  courses.json  enrollments.json  observees.json  user_profile.json
